# imgui-books

./: .gitignore  CMakeLists.txt  README.md
include/: addBook.h  app_state.h  book_data.h  history.h  interface.h  log.h
src/: addBook.cpp  history.cpp  interface.cpp  log.cpp  main.cpp
